# celox

./: .gitignore  .gitmodules  404.html  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  biome.json  four_state_test_plan.html  hashmap.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml  ts_testbench_gap_analysis.html  ts_testbench_implementation_plan.html  ts_testbench_vision.html  typedoc.json
.claude/: settings.json
crates/celox/: Cargo.toml
crates/celox-bench-sv/: Cargo.toml
crates/celox-bench-sv/src/: main.rs
crates/celox-napi/: Cargo.toml  browser.js  package.json
crates/celox-napi/src/: layout.rs  lib.rs
crates/celox-ts-gen/: Cargo.toml
crates/celox-ts-gen/src/: generator.rs  lib.rs  main.rs
crates/celox-ts-gen/src/snapshots/: celox_ts_gen__generator__tests__array_port_dts.snap  celox_ts_gen__generator__tests__array_port_js.snap  celox_ts_gen__generator__tests__array_port_md.snap  celox_ts_gen__generator__tests__basic_adder_dts.snap  celox_ts_gen__generator__tests__basic_adder_js.snap  celox_ts_gen__generator__tests__basic_adder_md.snap  celox_ts_gen__generator__tests__bit_type_dts.snap  celox_ts_gen__generator__tests__bit_type_js.snap  celox_ts_gen__generator__tests__bit_type_md.snap  celox_ts_gen__generator__tests__for_loop_instances_dts.snap  celox_ts_gen__generator__tests__instance_hierarchy_dts.snap  celox_ts_gen__generator__tests__instance_hierarchy_js.snap  celox_ts_gen__generator__tests__instance_hierarchy_md.snap  celox_ts_gen__generator__tests__interface_array_port_dts.snap  celox_ts_gen__generator__tests__interface_array_port_js.snap  celox_ts_gen__generator__tests__interface_port_dts.snap  celox_ts_gen__generator__tests__interface_port_js.snap  celox_ts_gen__generator__tests__interface_port_producer_dts.snap  celox_ts_gen__generator__tests__internal_vars_dts.snap  celox_ts_gen__generator__tests__internal_vars_js.snap  celox_ts_gen__generator__tests__internal_vars_md.snap  celox_ts_gen__generator__tests__no_clock_dts.snap  celox_ts_gen__generator__tests__no_clock_js.snap  celox_ts_gen__generator__tests__no_clock_md.snap  celox_ts_gen__generator__tests__output_only_dts.snap  celox_ts_gen__generator__tests__output_only_js.snap  celox_ts_gen__generator__tests__output_only_md.snap  celox_ts_gen__generator__tests__wide_port_dts.snap  celox_ts_gen__generator__tests__wide_port_js.snap  celox_ts_gen__generator__tests__wide_port_md.snap
crates/celox-wasm/: Cargo.toml
crates/celox-wasm/src/: lib.rs
crates/celox/benches/: overhead.rs  simulation.rs
crates/celox/examples/: dump_linear_sec_ir.rs  pass_benchmark.rs  run_veryl_project_test.rs  transform.rs
crates/celox/src/: backend.rs  cfg_order.rs  context_width.rs  debug.rs  display_format.rs  flatting.rs  flatting_tests.rs  ir.rs  lib.rs  logic_tree.rs  optimizer.rs  parser.rs  portable.rs  scheduler.rs  serde_helpers.rs  simulation.rs  simulator.rs  testbench.rs  timing.rs  vcd.rs
crates/celox/src/backend/: jit_engine.rs  memory_layout.rs  runtime.rs  runtime_event_buffer.rs  traits.rs  translator.rs  wasm_codegen.rs  wasm_runtime.rs  wide_ops.rs
crates/celox/src/debug/: output.rs
crates/celox/src/ir/: builder.rs  verify.rs
crates/celox/src/logic_tree/: comb.rs  const_inline.rs  lower.rs  range_store.rs
crates/celox/src/optimizer/: coalescing.rs
crates/celox/src/parser/: bitaccess.rs  bitslicer.rs  case.rs  ff.rs  fold_group_fusion.rs  loop_provenance.rs  module.rs  registry.rs  scheduler.rs
crates/celox/src/simulator/: builder.rs  error.rs
crates/celox/src/snapshots/: celox__simulator__tests__vcd_dump.snap  celox__simulator__tests__vcd_dump.snap.vcd
crates/celox/tests/: advanced_interface.rs  array_literal.rs  basic.rs  bitslice_param_repro.rs  bram_corruption.rs  cascade_race.rs  case_switch.rs  comb_observer.rs  compare_matrix.rs  concat_operators.rs  concatenation.rs  context_width.rs  cost_directed_mux.rs  counter.rs  cross_validate.rs  data_access.rs  duplicate_varpath.rs  enum_type.rs  error_detection.rs  error_readability.rs  expression_semantics.rs  false_loop.proptest-regressions  false_loop.rs  ff_comb_clock.rs  fifo_issue5.rs  flip_flop.rs  for_loop_unroll.rs  four_state.rs  four_state_expression_semantics.rs  fuzz_cross_validate.rs  generic_proto_pub_module.rs  hierarchy.rs  initial_readmem.rs  interface.rs  issue11_repro.rs  issue3_repro.rs  issue4_repro.rs  linear_sec.rs  linear_sorter.rs  linear_sorter_pull.rs  (+53 more)
crates/celox/tests/fixtures/: linear_sorter_pull_mre.veryl  veryl_std.rs
crates/celox/tests/macro_project/: Veryl.toml
crates/celox/tests/snapshots/: basic__hash_consing_sir.snap  basic__mux_safe_hoisting_sir.snap  basic__rle_comb.snap  basic__shared_expression_sir.snap  data_access__dynamic_index_write_sir.snap  data_access__dynamic_offset_sir.snap  error_readability__call_non_function_error_readability.snap  error_readability__combinational_loop_error_readability.snap  error_readability__combinational_loop_sir_error_readability.snap  error_readability__multiple_driver_error_readability.snap  error_readability__multiple_errors_readability.snap  error_readability__sv_module_unsupported_error_readability.snap  false_loop__large_scc_dynamic_loop.snap  false_loop__large_scc_dynamic_loop_bidirectional.snap  false_loop__scc_bit_cross_dependency.snap  flip_flop__async_reset_sir.snap  flip_flop__benchmark_loop_sir.snap  flip_flop__commit_sinking_multi_store_sir.snap  flip_flop__ff_common_load_hoisting_sir.snap  flip_flop__ff_dynamic_store_sir.snap  flip_flop__ff_function_call_multistatement_hoisting_sir.snap  flip_flop__rle_sir.snap  flip_flop__store_coalescing_sir.snap  native_mir__ff_branch_mir.snap  native_mir__high_pressure_comb_mir.snap  native_mir__high_pressure_comb_mir.snap.new  native_mir__large_comb_pressure_mir.snap  native_mir__large_comb_pressure_mir.snap.new  native_mir__rle_comb_mir.snap  native_mir__rle_comb_mir.snap.new  native_mir__shared_expression_mir.snap  native_mir__shared_expression_mir.snap.new
crates/celox/tests/test_utils/: mod.rs  veryl_sim.rs
(+9909 files in other folders)
