[workspace]
members = [
    "crates/celox",
    "crates/celox-bench-sv",
    "crates/celox-macros",
    "crates/celox-napi",
    "crates/celox-ts-gen",
    "crates/celox-wasm",
]
resolver = "2"

[workspace.package]
version     = "0.18.0"
authors     = ["tignear"]
repository  = "https://github.com/celox-sim/celox"
keywords    = ["hdl", "simulator", "veryl"]
categories  = ["simulation"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
edition     = "2024"
description = "Celox HDL Simulator"
rust-version = "1.94.1"

[workspace.dependencies]
# Veryl dependencies via submodule path
veryl-analyzer = { path = "deps/veryl/crates/analyzer" }
veryl-emitter  = { path = "deps/veryl/crates/emitter" }
veryl-metadata = { path = "deps/veryl/crates/metadata" }
veryl-parser   = { path = "deps/veryl/crates/parser", default-features = false }
veryl-path      = { path = "deps/veryl/crates/path" }
veryl-simulator = { path = "deps/veryl/crates/simulator" }

# Shared dependencies (also needed by veryl submodule crates)
anyhow          = "1.0"
bit-set         = "0.8"
clap            = { version = "4.5.60", features = ["derive"] }
daggy           = "0.9.0"
fxhash          = "0.2.1"
indent          = "0.1.1"
itertools       = "0.14.0"
log             = "0.4.29"
miette          = { version = "7.6" }
num-bigint      = "0.4"
num-traits      = "0.2.19"
once_cell       = "1.21"
parol           = "4.3"
parol_runtime   = "4.3"
paste           = "1.0"
regex           = "1.12.3"
scnr2           = "0.5.0"
semver          = { version = "1.0", features = ["serde"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
similar         = { version = "2.7.0", features = ["text", "inline"] }
smallvec        = "1.15"
strnum_bitwidth = "0.1.2"
tempfile        = "3.26"
thiserror       = "2.0"
toml            = "1.0.3"
url             = { version = "2.5", features = ["serde"] }
vcd             = "0.7.0"
walkdir         = "2.5.0"

# Dependencies needed by veryl-simulator (inherited via workspace)
criterion       = { package = "codspeed-criterion-compat", version = "4.0" }
fst-writer      = "0.3.1"
pprof           = { version = "0.15.0", features = ["flamegraph"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
type_complexity = "allow"
too_many_arguments = "allow"
collapsible_if = "allow"

[profile.dev.build-override]
opt-level = 3

[profile.dev]
debug = false

[profile.dev.package]
insta.opt-level   = 3
similar.opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.release]
strip         = "debuginfo"
lto           = true
codegen-units = 1

[profile.bench]
debug = true

# Profile for wasm-pack builds. LTO is disabled to avoid a known issue
# where proc-macro dependencies (syn) get incorrectly compiled for the
# wasm32 target under full LTO.
[profile.wasm-release]
inherits      = "release"
lto           = false
codegen-units = 16
