[workspace]
members = [
    "crates/celox",
    "crates/celox-bench-sv",
    "crates/celox-macros",
    "crates/celox-napi",
    "crates/celox-ts-gen",
    "crates/celox-wasm",
]
resolver = "2"

[workspace.package]
version     = "0.18.0"
authors     = ["tignear"]
repository  = "https://github.com/celox-sim/celox"
keywords    = ["hdl", "simulator", "veryl"]
categories  = ["simulation"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
edition     = "2024"
description = "Celox HDL Simulator"
rust-version = "1.95.0"

[workspace.dependencies]
veryl-analyzer = "0.20.0"
veryl-emitter  = "0.20.0"
veryl-metadata = "0.20.0"
veryl-parser   = { version = "0.20.0", default-features = false }
veryl-path      = "0.20.0"
veryl-simulator = "0.20.0"
veryl-std       = "0.20.0"

bit-set         = "0.10"
clap            = { version = "4.5.60", features = ["derive"] }
fxhash          = "0.2.1"
itertools       = "0.14.0"
miette          = { version = "7.6" }
num-bigint      = "0.4"
num-traits      = "0.2.19"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tempfile        = "3.26"
thiserror       = "2.0"
toml            = "1.0.3"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
type_complexity = "allow"
too_many_arguments = "allow"
collapsible_if = "allow"

[profile.dev.build-override]
opt-level = 3

[profile.dev]
debug = false

[profile.dev.package]
insta.opt-level   = 3
similar.opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.release]
strip         = "debuginfo"
lto           = true
codegen-units = 1

[profile.bench]
debug = true

# Profile for wasm-pack builds. LTO is disabled to avoid a known issue
# where proc-macro dependencies (syn) get incorrectly compiled for the
# wasm32 target under full LTO.
[profile.wasm-release]
inherits      = "release"
lto           = false
codegen-units = 16
