[package]
name                  = "celox-ts-gen"
version               = "0.18.0"
authors.workspace     = true
repository.workspace  = true
license.workspace     = true
description.workspace = true
edition.workspace     = true

[dependencies]
clap            = { workspace = true }
miette          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
veryl-analyzer  = { workspace = true }
veryl-metadata  = { workspace = true }
veryl-parser    = { workspace = true }

[dev-dependencies]
insta = "1.46"

[[bin]]
name = "celox-gen-ts"
path = "src/main.rs"
