[package]
name = "celox-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for the Celox HDL simulator"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
celox = { path = "../celox" }
veryl-parser = { workspace = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde_json = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
